--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,42 +7,18 @@ on:
     branches: ['main']      # roda em PRs direcionados para main
 
 jobs:
-  ci-minimo:
+  docker-publish:
     runs-on: ubuntu-latest
+    needs: docker-build
     steps:
       - name: Checkout do código
         uses: actions/checkout@v4
 
-      - name: Validar estrutura mínima
-        run: |
-          echo "Validação já configurada no Dia 2"
+      - name: Login no DockerHub
+        run: echo "${{ secrets.dckr_pat_6J4GOMU794M5DIhJ6m-HSMfVZC0 }}" | docker login -u "${{ secrets.nessao }}" --password-stdin
 
-  test-api:
-    runs-on: ubuntu-latest
-    needs: ci-minimo
+      - name: Build da imagem Docker
+        run: docker build -t ${{ secrets.nessao }}/devops-lab-api:latest ./app
 
-    steps:
-      - name: Checkout do código
-        uses: actions/checkout@v4
-
-      - name: Configurar Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-
-      - name: Instalar dependências da API
-        run: |
-          cd app
-          pip install -r requirements.txt
-
-      - name: Instalar Newman (CLI Postman)
-        run: npm install -g newman
-
-      - name: Rodar API em background
-        run: |
-          cd app
-          nohup python main.py &
-
-      - name: Executar testes Postman
-        run: |
-          newman run tests/postman/health-check.postman_collection.json
+      - name: Push para DockerHub
+        run: docker push ${{ secrets.nessao }}/devops-lab-api:latest
