--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,66 @@ on:
     branches: ['main']      # roda em PRs direcionados para main
 
 jobs:
+  ci-minimo:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout do código
+        uses: actions/checkout@v4
+
+      - name: Validar estrutura mínima
+        run: |
+          echo "Validação já configurada no Dia 2"
+
+  test-api:
+    runs-on: ubuntu-latest
+    needs: ci-minimo
+
+    steps:
+      - name: Checkout do código
+        uses: actions/checkout@v4
+
+      - name: Configurar Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: Instalar dependências da API
+        run: |
+          cd app
+          pip install -r requirements.txt
+
+      - name: Instalar Newman (CLI Postman)
+        run: npm install -g newman
+
+      - name: Rodar API em background
+        run: |
+          cd app
+          nohup python main.py &
+
+      - name: Executar testes Postman
+        run: |
+          newman run tests/postman/health-check.postman_collection.json
+
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: test-api
+    steps:
+      - name: Checkout do código
+        uses: actions/checkout@v4
+
+      - name: Build da imagem Docker
+        run: docker build -t devops-lab-api:ci ./app
+
+      - name: Rodar container em background
+        run: docker run -d -p 5000:5000 --name api devops-lab-api:ci
+
+      - name: Instalar Newman (CLI Postman)
+        run: npm install -g newman
+
+      - name: Executar testes Postman contra container
+        run: |
+          newman run tests/postman/health-check.postman_collection.json           --env-var baseUrl=http://localhost:5000
+          
   docker-publish:
     runs-on: ubuntu-latest
     needs: docker-build
