--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build da imagem Docker
-        run: docker build -t devops-lab-api:ci ./app
+        run: docker build -t devops-lab-api:ci -f ./app/Dockerfile ./app
 
       - name: Rodar container em background
         run: docker run -d -p 5000:5000 --name api devops-lab-api:ci
