--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,10 +75,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Login no DockerHub
-        run: echo "${{ secrets.dckr_pat_6J4GOMU794M5DIhJ6m-HSMfVZC0 }}" | docker login -u "${{ secrets.nessao }}" --password-stdin
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Build da imagem Docker
-        run: docker build -t ${{ secrets.nessao }}/devops-lab-api:latest ./app
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/devops-lab-api:latest ./app
 
       - name: Push para DockerHub
-        run: docker push ${{ secrets.nessao }}/devops-lab-api:latest
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/devops-lab-api:latest
